# Homework-HUB

./: .env.example  .gitignore  Insomnia_2022-04-28.json  README.md  docker-compose.yml  pyproject.toml  requirements.txt
API/: .env.example  app.py  (+2 more)
APIv2/: .env.example  Dockerfile  __main__.py  app.py  my_err.py  pyproject.toml  requirements.txt  settings.py
APIv2/alembic/: env.py
APIv2/alembic/versions/: 17908299d276_second.py  3190eb65c120_masterinit.py  3d217a7f9019_third.py  50515cc1c030_inital.py
APIv2/api/: __init__.py  ban_list_api.py  class_api.py  dependencies.py  homework_api.py  parser_api.py  schedule_api.py  student_api.py
APIv2/database/: APIv2.db  __all_models.py  ban_list.py  chats.py  classes.py  db_session.py  homeworks.py  lessons.py  parsers.py  schedules.py  students.py  tg_photos.py  time_tables.py  week_days.py
APIv2/models/: student_pdc.py
APIv2/schemas/: ban_list_pdc.py  class_pdc.py  homework_pdc.py  lesson_pdc.py  parser_pdc.py  schedule_pdc.py  student_pdc.py  time_table_pdc.py  week_days_pdc.py
APIv2/service/: ban_list.py  homework.py  my_class.py  parser.py  redis_methods.py  schedule.py  student.py
APIv2/services/: ban_list.py  homework.py  my_class.py  schedule.py  student.py
BOTv2/: .env.example  CONSTANTS.py  Dockerfile  bot.py  pyproject.toml  requirements.txt  start_bot.py
BOTv2/languages/: language_pack_ru.py  text_keys.py  text_proccesor.py
BOTv2/services/: everyday_mailing.py  scripts.py
BOTv2/services/restapi/: URLS.py  api_error.py  formatters.py  restapi.py  restapi_old.py  session.py
BOTv2/tgbot/: handlers.py  users_manager.py
BOTv2/tgbot/entities/: api_error.py  mode.py  stage.py  user.py
BOTv2/tgbot/filters/: __init__.py  admin_filter.py  developer_filter.py  group_filter.py  registration_filter.py  student_filter.py
BOTv2/tgbot/keyboards/inline/: markup.py
BOTv2/tgbot/modes/registration/: __init__.py  registration_mode.py  registration_mode_old.py
(+146 files in other folders)
