[tool.poetry]
name = "homebot"
version = "0.1.0"
description = ""
authors = ["Artem tg: @fohan"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.20.0"
fastapi = "^0.89.1"
python-dotenv = "^0.21.0"
requests = "^2.28.2"
aiogram = "^2.24"
sqlalchemy = "^1.4.46"
redis = "^4.5.4"
cloudpickle = "^2.2.1"
sentry-sdk = "^1.14.0"


[tool.poetry.group.dev.dependencies]
fastapi-profiler = "^1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119